typed-schema/tests/ui/fail/op_unknown_input_shape.stderr
error[E0277]: the trait bound `Input: Shape` is not satisfied
  --> tests/ui/fail/op_unknown_input_shape.rs:16:31
   |
16 | #[op(name = "bad.op", input = Input, output = Output)]
   |                               ^^^^^ unsatisfied trait bound
   |
help: the trait `Shape` is not implemented for `Input`
  --> tests/ui/fail/op_unknown_input_shape.rs:5:1
   |
 5 | struct Input {
   | ^^^^^^^^^^^^
help: the trait `Shape` is implemented for `Output`
  --> tests/ui/fail/op_unknown_input_shape.rs:9:46
   |
 9 | #[derive(Serialize, Deserialize, JsonSchema, typed_schema::Shape)]
   |                                              ^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the derive macro `typed_schema::Shape` (in Nightly builds, run with -Z macro-backtrace for more info)
